fix(carousel): hide vertical scrollbar (#1468)

--- a/src/less/carousel/base/carousel.less
+++ b/src/less/carousel/base/carousel.less
@@ -156,6 +156,7 @@ span.carousel__container {
             border-color: rgba(0, 0, 0, 0);
             -webkit-overflow-scrolling: touch;
             overflow-x: auto; // also used in js to determine scroll behavior
+            overflow-y: hidden;
             padding-bottom: 10px;
             scroll-behavior: smooth;
             -webkit-scroll-snap-type: mandatory;
